--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 language: cpp
 before_script:
 - sudo apt-get install libboost-test-dev -y
-- sudo apt-get install libgtest-dev -y
 - echo "deb http://archive.ubuntu.com/ubuntu xenial main universe" | sudo tee -a /etc/apt/sources.list
 - sudo apt-get update -qq
+- sudo apt-get install libgtest-dev -y
+- cd /usr/src/gtest
+- sudo cmake CMakeLists.txt
+- sudo make
+- sudo cp *.a /usr/lib
 script:
-- cd lesson_1/source/ && mkdir build && cd build
+- cd $TRAVIS_BUILD_DIR/lesson_1/source/ && mkdir build && cd build
 - cmake ..
 - cmake --build .
 - cmake --build . --target test
