--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_script:
 - sudo apt-get update -qq
 - sudo apt-get install libgtest-dev -y
 - cd /usr/src/gtest
-- sudo -E cmake CMakeLists.txt
+- sudo env "PATH=$PATH" cmake CMakeLists.txt
 - sudo make
 - sudo cp *.a /usr/lib
 script:
