add travis env variable for bintray key

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ deploy:
   provider: script
   skip_cleanup: true
   script:
-  - curl -T helloworld-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -ua8a3:1a024ba4bfd784ab382e568c088d3f1e0cd352dc "https://api.bintray.com/content/fakecompany/otus/helloworld/$TRAVIS_BUILD_NUMBER/helloworld-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
+  - curl -T helloworld-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -ua8a3:$BINTRAY_API_KEY "https://api.bintray.com/content/fakecompany/otus/helloworld/$TRAVIS_BUILD_NUMBER/helloworld-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
