ip adress storage optimization (#2)
* lesson_2

* delete lexicographic sort

* add travis branch safelist

* change build package on travis

* try to fix gtest compile error

* ip storage optimization

* ip storage optimization

--- a/lesson_2/CMakeLists.txt
+++ b/lesson_2/CMakeLists.txt
@@ -23,7 +23,7 @@ target_include_directories(ip_filter_gtests PRIVATE
 
 target_link_libraries(ip_filter_gtests 
     ${GTEST_BOTH_LIBRARIES}
-    pthread
+    ${CMAKE_THREAD_LIBS_INIT}
 )
 
 if (MSVC)
